# obs-studio

.github/workflows/: main.yml
libobs/: obs.c
libobs-opengl/: gl-cocoa.m  gl-subsystem.c  gl-subsystem.h
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
plugins/mac-videotoolbox/: CMakeLists.txt  encoder-h264.c  encoder-h265.c  encoder.c  encoder.h
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg-amf.c  obs-ffmpeg.c  texture-amf-opts.hpp  texture-amf.cpp
plugins/obs-ffmpeg/data/locale/: en-US.ini
plugins/obs-qsv11/: CMakeLists.txt  QSV_Encoder.h  QSV_HevcEncoder.cpp  QSV_HevcEncoder_Internal.cpp  QSV_HevcEncoder_Internal.h  common_directx11.cpp  obs-qsv11-plugin-main.c  obs-qsv11.c
